fix(medi): Remove max-height in slider wrap 🐛

--- a/medi/css/style.css
+++ b/medi/css/style.css
@@ -490,7 +490,6 @@ body.locked {
   position: relative;
   width: 58%;
   max-width: 746px;
-  max-height: 533px;
 }
 
 .hero__slider {
